--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Leo's Website
 email: lrodriguessantanadeandrade@albany.edu
 description: Leo is a student
-url: lgoeb.github.io
+url: http://lgoeb.github.io
 github_username: lgoeb
 
 # Build settings
